--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -17,14 +17,38 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="RNR-Y3-ihe" customClass="UserTableViewCell" customModule="Random_Users" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.666667938232422"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" rowHeight="54" id="RNR-Y3-ihe" customClass="UserTableViewCell" customModule="Random_Users" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="54"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="RNR-Y3-ihe" id="K3S-17-te3">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.666667938232422"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="54"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Nen-ne-S2f">
+                                            <rect key="frame" x="20" y="0.0" width="54" height="54"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="Nen-ne-S2f" secondAttribute="height" multiplier="1:1" id="DXl-Ra-dJl"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TIg-uS-kkY">
+                                            <rect key="frame" x="82" y="16.666666666666668" width="86" height="21.000000000000004"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Nen-ne-S2f" firstAttribute="top" secondItem="K3S-17-te3" secondAttribute="top" id="5gM-UF-75c"/>
+                                        <constraint firstItem="TIg-uS-kkY" firstAttribute="leading" secondItem="Nen-ne-S2f" secondAttribute="trailing" constant="8" id="HTL-lS-lMV"/>
+                                        <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="TIg-uS-kkY" secondAttribute="trailing" constant="8" id="OrO-1Q-UFj"/>
+                                        <constraint firstItem="TIg-uS-kkY" firstAttribute="centerY" secondItem="K3S-17-te3" secondAttribute="centerY" id="Z1X-Se-IgK"/>
+                                        <constraint firstAttribute="bottom" secondItem="Nen-ne-S2f" secondAttribute="bottom" id="tiT-CI-cyF"/>
+                                        <constraint firstItem="Nen-ne-S2f" firstAttribute="leading" secondItem="K3S-17-te3" secondAttribute="leading" constant="20" id="y7t-qr-cMu"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="userImageView" destination="Nen-ne-S2f" id="uiA-B2-v1p"/>
+                                    <outlet property="userNameLabel" destination="TIg-uS-kkY" id="auH-ir-jHK"/>
                                     <segue destination="m6W-EC-S8c" kind="show" id="2hd-8X-cLF"/>
                                 </connections>
                             </tableViewCell>
